--- a/app/src/main/res/layout/fragment_contacts_list.xml
+++ b/app/src/main/res/layout/fragment_contacts_list.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".view.ContactsListFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/contact_list"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/contact_list"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
 
 </FrameLayout>
