--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -1,18 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_gravity="start"
+    android:paddingTop="16dp"
+    android:paddingBottom="16dp">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/contact_name"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textColor="@color/text_black"
+            android:textSize="17sp"
+            android:padding="4dp"
+            android:text="Carol Rodriquez"/>
+
+        <TextView
+            android:id="@+id/contact_phone"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textColor="@color/text_black"
+            android:textSize="14sp"
+            android:text="+7 (903) 425-3032"/>
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/contact_name"
+        android:id="@+id/contact_height"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent" />
+        android:layout_gravity="end|top"
+        android:textColor="@color/text_black"
+        android:padding="4dp"
+        android:text="201.9"/>
 
-    <TextView
-        android:id="@+id/contact_phone"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent" />
-
-</LinearLayout>
+</FrameLayout>
